# jpeg-compression

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  convert_spectral.sh  out2.ppm  scans.txt
include/: color_conversion.hpp  dct.hpp  decode_huffman.hpp  huffman_code.hpp  jpeg_body.hpp  jpeg_data_stream.hpp  jpeg_def.hpp  jpeg_header.hpp  jpeg_scan.hpp  jpeg_transform.hpp  quantization.hpp  sprite_handler.hpp
include/menu/: basic_menu.hpp  file_browser.hpp  frame_counter.hpp
src/: color_conversion.cpp  dct.cpp  decode_huffman.cpp  huffman_code.cpp  jpeg_body.cpp  jpeg_data_stream.cpp  jpeg_def.cpp  jpeg_header.cpp  jpeg_scan.cpp  jpeg_transform.cpp  main.cpp  quantization.cpp  sprite_handler.cpp
src/menu/: file_browser.cpp  frame_counter.cpp
